// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Travis parseLog returns the correct string 1`] = `
"> public-test@1.0.0 test /home/travis/build/JasonEtco/public-test
> echo \\"Error: no test specified\\" && exit 1

Error: no test specified"
`;

exports[`Travis serialize returns the correct body string 1`] = `
":sparkles: Good work on this PR so far! :sparkles: Unfortunately, the [Travis CI build](https://travis-ci.org/JasonEtco/public-test/builds/123?utm_source=github_status&utm_medium=notification) is failing. Here's the output:
\`\`\`
> public-test@1.0.0 test /home/travis/build/JasonEtco/public-test
> echo \\"Error: no test specified\\" && exit 1

Error: no test specified
\`\`\`
I'm sure you can fix it! If you need help, don't hesitate to ask a maintainer of the project!"
`;

exports[`Travis serialize returns the correct body string with multiple jobs 1`] = `
"Here's the failing log from [1](https://travis-ci.org/JasonEtco/public-test/builds/123?utm_source=github_status&utm_medium=notification/1):
\`\`\`
> public-test@1.0.0 test /home/travis/build/JasonEtco/public-test
> echo \\"Error: no test specified\\" && exit 1

Error: no test specified
\`\`\`
Here's the failing log from [1](https://travis-ci.org/JasonEtco/public-test/builds/123?utm_source=github_status&utm_medium=notification/1):
\`\`\`
> public-test@1.0.0 test /home/travis/build/JasonEtco/public-test
> echo \\"Error: no test specified\\" && exit 1

Error: no test specified
\`\`\`
"
`;
